# bark

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: setup_google_drive.md
scripts/: test_drive_loader.py
src/bark/: __init__.py  cli.py  server.py
src/bark/context/: __init__.py  chroma.py  drive_loader.py  embeddings.py  engine.py  notion_loader.py  summarizer.py  wiki_loader.py
src/bark/core/: __init__.py  chatbot.py  config.py  openrouter.py  tools.py
src/bark/integrations/: __init__.py
src/bark/integrations/slack/: handler.py  verification.py
src/bark/tools/: __init__.py  context_tools.py  memory_tools.py
vibe-notes/: 1.md.resolved  2.md.resolved  implementation_plan.md.resolved
